<resources>
    <string name="app_name">Planszowki</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="ranking">Ranking</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="rank">#%d</string>
    <string name="complexity">Complexity</string>
    <string name="interaction">Interaction</string>
    <string name="randomness">Randomness</string>
    <string name="awesomeness">Awesomeness</string>
    <string name="description">Description</string>
    <string name="additional_information">Additional Information</string>
    <string name="author">Author:</string>
    <string name="developer">Developer:</string>
    <string name="category">Category:</string>
    <string name="comments">Comments</string>
    <string name="minimum_age_format">%d +</string>
    <string name="multiplayer_format"
        formatted="false">%d - %d</string>
    <string name="gametime_format">%d mins</string>
    <string name="rating">Rating</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="comment">Comment</string>
    <string name="enter_comment">Enter comment..</string>

    <plurals
        name="games">
        <item quantity="one">%d game</item>
        <item quantity="other">%d games</item>
    </plurals>
</resources>
