<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_dimen_x2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.xenovis.planszowki.widget.RatingLayout
            android:id="@+id/complexity_rating_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/complexity"/>
        <com.xenovis.planszowki.widget.RatingLayout
            android:id="@+id/interaction_rating_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/interaction"/>
        <com.xenovis.planszowki.widget.RatingLayout
            android:id="@+id/randomness_rating_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/randomness"/>
        <com.xenovis.planszowki.widget.RatingLayout
            android:id="@+id/awesomeness_rating_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/awesomeness"/>
    </LinearLayout>
</LinearLayout>