<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login_background"
    tools:context=".screen.start.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/semitransparentBlack"
            android:animateLayoutChanges="true"
            android:padding="@dimen/standard_dimen_x2"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/register_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/standard_dimen_x2"
                        android:src="@drawable/ic_user_details_20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/firstname_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="sans-serif"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/semitransparentWhite"
                            android:hint="@string/first_name"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textSize="18sp"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/white"/>


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/standard_dimen_x2"
                        android:src="@drawable/ic_user_details_20dp"
                        android:id="@+id/imageView"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/lastname_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="sans-serif"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/semitransparentWhite"
                            android:hint="@string/last_name"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textSize="18sp"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/white"/>


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/standard_dimen_x2"
                        android:src="@drawable/ic_email_20dp"
                        android:tint="@android:color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="sans-serif"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/semitransparentWhite"
                            android:hint="@string/e_mail"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textSize="18sp"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/white"/>


                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/standard_dimen_x2"
                        android:src="@drawable/ic_user_20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/username_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="sans-serif"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/semitransparentWhite"
                            android:hint="@string/username"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textSize="18sp"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/white"/>


                    </LinearLayout>

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/standard_dimen_x2"
                    android:src="@drawable/ic_lock_20dp"
                    android:tint="@android:color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/semitransparentWhite"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="18sp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/white"/>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/standard_dimen_x2">

            <TextView
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/login"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="@dimen/standard_dimen"
                android:padding="@dimen/standard_dimen_x2"/>

            <TextView
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:text="@string/register"
                android:gravity="center"
                android:layout_marginBottom="@dimen/standard_dimen"
                android:background="@color/colorAccent"
                android:padding="@dimen/standard_dimen_x2"/>

            <TextView
                android:id="@+id/guest_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:text="@string/continue_as_a_guest"
                android:gravity="center"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/standard_dimen_x2"/>
        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>