<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@android:color/white">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_dimen_x2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/big_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:padding="@dimen/standard_dimen">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_dimen">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_age_32dp"/>
                    <TextView
                        android:id="@+id/minimum_age_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center_horizontal"
                        style="@style/PrimaryTextStyle"
                        tools:text="3 +"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_dimen">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_multiplayer_32dp"/>
                    <TextView
                        android:id="@+id/multiplayer_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center_horizontal"
                        style="@style/PrimaryTextStyle"
                        tools:text="2 - 4"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_dimen">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_calendar_32dp"/>

                    <TextView
                        android:id="@+id/production_year_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center_horizontal"
                        style="@style/PrimaryTextStyle"
                        tools:text="2016"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_dimen">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:tint="@android:color/white"
                        android:src="@drawable/ic_clock_32dp"/>

                    <TextView
                        android:id="@+id/average_time_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="center_horizontal"
                        style="@style/PrimaryTextStyle"
                        tools:text="120 mins"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ratings_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:divider="@drawable/horiz_divider"
                android:showDividers="middle"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_dimen">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        style="@style/SecondaryTextStyle"
                        android:textSize="12sp"
                        android:text="@string/complexity"/>
                    <TextView
                        android:id="@+id/complexity_rating_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|bottom"
                        style="@style/PrimaryTextStyle"
                        tools:text="3.21"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/standard_dimen">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        style="@style/SecondaryTextStyle"
                        android:textSize="12sp"
                        android:text="@string/interaction"/>
                    <TextView
                        android:id="@+id/interaction_rating_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|bottom"
                        style="@style/PrimaryTextStyle"
                        tools:text="3.21"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/standard_dimen">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        style="@style/SecondaryTextStyle"
                        android:textSize="12sp"
                        android:text="@string/randomness"/>
                    <TextView
                        android:id="@+id/randomness_rating_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|bottom"
                        style="@style/PrimaryTextStyle"
                        tools:text="3.21"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_dimen">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        style="@style/SecondaryTextStyle"
                        android:textSize="12sp"
                        android:text="@string/awesomeness"/>
                    <TextView
                        android:id="@+id/awesomeness_rating_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|bottom"
                        style="@style/PrimaryTextStyle"
                        tools:text="3.21"/>
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/shadow"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_dimen_x2"
                style="@style/PrimaryTextStyle"
                android:text="@string/description"/>

            <include layout="@layout/reverse_shadow"/>

            <TextView
                android:id="@+id/description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SecondaryTextStyle"
                android:padding="@dimen/standard_dimen"
                android:background="@android:color/white"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec imperdiet consequat tempus. Ut venenatis justo in massa blandit, vitae imperdiet massa varius. Aliquam tempus in augue a ultrices. Praesent magna orci, rhoncus a molestie eget, fringilla non mi. Duis ut fringilla mauris, in dignissim orci. Nam odio mi, fringilla vitae arcu et, blandit mollis nisi. Duis vitae ultricies justo, nec laoreet nulla. Nulla sit amet finibus ipsum, quis maximus purus. Phasellus porta venenatis nisl, eget rutrum lorem molestie vel. Nam eu sem odio. Nulla justo lacus, faucibus non lectus non, tempus dictum leo. Nam iaculis orci non sem dictum, in interdum ipsum maximus. Maecenas non purus sodales, hendrerit nulla maximus, venenatis odio."/>

            <include layout="@layout/shadow"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_dimen_x2"
                style="@style/PrimaryTextStyle"
                android:text="@string/additional_information"
                android:id="@+id/textView"/>

            <include layout="@layout/reverse_shadow"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:divider="@drawable/divider"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/standard_dimen_x2">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/PrimaryTextStyle"
                        android:text="@string/author"/>
                    <TextView
                        android:id="@+id/author_textview"
                        android:layout_width="0dp"
                        android:gravity="end"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        style="@style/SecondaryTextStyle"
                        tools:text="Jan Głowacki"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/standard_dimen_x2">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/PrimaryTextStyle"
                        android:text="@string/developer"/>
                    <TextView
                        android:id="@+id/developer_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_weight="2"
                        style="@style/SecondaryTextStyle"
                        tools:text="Jan Głowacki"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/standard_dimen_x2">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/PrimaryTextStyle"
                        android:text="@string/category"/>
                    <TextView
                        android:id="@+id/category_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="end"
                        style="@style/SecondaryTextStyle"
                        tools:text="Jan Głowacki"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/comment_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/standard_dimen_x2">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_comment_24dp"
                        android:layout_marginRight="@dimen/standard_dimen_x2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/PrimaryTextStyle"
                        android:text="@string/comments"/>
                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/shadow"/>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>